[tool.poetry]
name = "experiments-python-deno-code-exporer-jupyter-notebooks"
version = "0.1.0"
description = ""
authors = ["Pavel Balashov <pavel.balashov1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
notebook = "^7.3.2"
jupyterlab = "^4.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
